add categoryPage.html & js  category price select

--- a/search.html
+++ b/search.html
@@ -58,18 +58,18 @@
 </head>
 <body>
     <div>
-        <a href="#"><img src="http://how2j.cn/tmall/img/site/logo.gif" id="logo"/></a>
+        <a href="#nowhere"><img src="http://how2j.cn/tmall/img/site/logo.gif" id="logo"/></a>
         <div class="searchDiv">
             <input placeholder="手机， 太阳镜， 相机"/>
             <button type="submit">搜索</button>
             <div class="searchDivBelow">
-                <span><a href="#">平衡车</a></span>
+                <span><a href="#nowhere">平衡车</a></span>
                 <span>|</span>
-                <span><a href="#">扫地机器人</a></span>
+                <span><a href="#nowhere">扫地机器人</a></span>
                 <span>|</span>
-                <span><a href="#">原汁机</a></span>
+                <span><a href="#nowhere">原汁机</a></span>
                 <span>|</span>
-                <span><a href="#">冰箱</a></span>
+                <span><a href="#nowhere">冰箱</a></span>
             </div>
         </div>
     </div>
