--- a/simple_search.html
+++ b/simple_search.html
@@ -59,18 +59,18 @@
 </head>
 <body>
     <div>
-        <a href="#"><img src="http://how2j.cn/tmall/img/site/simpleLogo.png" id="simplelogo"></a>
+        <a href="#nowhere"><img src="http://how2j.cn/tmall/img/site/simpleLogo.png" id="simplelogo"></a>
         <div class="simpleSearchDiv pull-right">
             <input name="keyword" placeholder="平衡车 苹果7"/>
             <button type="submit">搜索</button>
             <div class="simpleSearchBelow">
-                <span><a href="#">冰箱</a></span>
+                <span><a href="#nowhere">冰箱</a></span>
                 <span>|</span>
-                <span><a href="#">空调</a></span>
+                <span><a href="#nowhere">空调</a></span>
                 <span>|</span>
-                <span><a href="#">男表</a></span>
+                <span><a href="#nowhere">男表</a></span>
                 <span>|</span>
-                <span><a href="#">女表</a></span>
+                <span><a href="#nowhere">女表</a></span>
             </div>
         </div>
     </div>
