--- a/common_footer.html
+++ b/common_footer.html
@@ -86,96 +86,96 @@
 <body>
     <div class="footer">
         <div class="footer_ensure" id="footer_ensure">
-            <a href="#">
+            <a href="#nowhere">
                 <img src="http://how2j.cn/tmall/img/site/ensure.png"/>
             </a>
         </div>
         <div class="footer_desc">
             <div class="desc_column">
                 <span  class="desc_title">购物指南</span>
-                <span><a href="#" class="desc_title">免费注册</a></span>
-                <span><a href="#">开通支付宝</a></span>
-                <span><a href="#">支付宝充值</a></span>
+                <span><a href="#nowhere" class="desc_title">免费注册</a></span>
+                <span><a href="#nowhere">开通支付宝</a></span>
+                <span><a href="#nowhere">支付宝充值</a></span>
             </div>
             <div class="desc_column">
                 <span  class="desc_title"> 天猫保障</span>
-                <span><a href="#">发票保障</a></span>
-                <span><a href="#">售后规则</a></span>
-                <span><a href="#">缺货赔付</a></span>
+                <span><a href="#nowhere">发票保障</a></span>
+                <span><a href="#nowhere">售后规则</a></span>
+                <span><a href="#nowhere">缺货赔付</a></span>
             </div>
             <div class="desc_column">
                 <span  class="desc_title">支付方式</span>
-                <span><a href="#">快捷支付</a></span>
-                <span><a href="#">信用卡</a></span>
-                <span><a href="#">蚂蚁花呗</a></span>
-                <span><a href="#">货到付款</a></span>
+                <span><a href="#nowhere">快捷支付</a></span>
+                <span><a href="#nowhere">信用卡</a></span>
+                <span><a href="#nowhere">蚂蚁花呗</a></span>
+                <span><a href="#nowhere">货到付款</a></span>
             </div>
             <div class="desc_column">
                 <span  class="desc_title">商家服务</span>
-                <span><a href="#">商家中心</a></span>
-                <span><a href="#">天猫智库</a></span>
-                <span><a href="#">物流服务</a></span>
-                <span><a href="#">喵言喵语</a></span>
-                <span><a href="#">运营服务</a></span>
+                <span><a href="#nowhere">商家中心</a></span>
+                <span><a href="#nowhere">天猫智库</a></span>
+                <span><a href="#nowhere">物流服务</a></span>
+                <span><a href="#nowhere">喵言喵语</a></span>
+                <span><a href="#nowhere">运营服务</a></span>
             </div>
             <div class="desc_column">
-                <span><a href="#" class="desc_title">手机天猫</a></span>
-                <span><a href="#"><img src="http://how2j.cn/tmall/img/site/ma.png"></a></span>
+                <span><a href="#nowhere" class="desc_title">手机天猫</a></span>
+                <span><a href="#nowhere"><img src="http://how2j.cn/tmall/img/site/ma.png"></a></span>
             </div>
         </div>
         <div class="footer_ali">
             <img src="http://how2j.cn/tmall/img/site/cateye.png" class="cateye">
             <div class="copy_right">
                 <div class="white_link">
-                    <a href="#">关于天猫</a>
-                    <a href="#">帮助中心</a>
-                    <a href="#">开放平台</a>
-                    <a href="#">诚聘英才</a>
-                    <a href="#">联系我们</a>
-                    <a href="#">网站合作</a>
-                    <a href="#">知识产权</a>
-                    <a href="#">廉正举报</a>
+                    <a href="#nowhere">关于天猫</a>
+                    <a href="#nowhere">帮助中心</a>
+                    <a href="#nowhere">开放平台</a>
+                    <a href="#nowhere">诚聘英才</a>
+                    <a href="#nowhere">联系我们</a>
+                    <a href="#nowhere">网站合作</a>
+                    <a href="#nowhere">知识产权</a>
+                    <a href="#nowhere">廉正举报</a>
                 </div>
                 <div class="white_link">
-                    <a href="#">阿里巴巴集团</a>
+                    <a href="#nowhere">阿里巴巴集团</a>
                     <span class="slash">|</span>
-                    <a href="#">淘宝网</a>
+                    <a href="#nowhere">淘宝网</a>
                     <span class="slash">|</span>
-                    <a href="#">天猫</a>
+                    <a href="#nowhere">天猫</a>
                     <span class="slash">|</span>
-                    <a href="#">淘宝网</a>
+                    <a href="#nowhere">淘宝网</a>
                     <span class="slash">|</span>
-                    <a href="#">聚划算</a>
+                    <a href="#nowhere">聚划算</a>
                     <span class="slash">|</span>
-                    <a href="#">全球速卖通</a>
+                    <a href="#nowhere">全球速卖通</a>
                     <span class="slash">|</span>
-                    <a href="#">阿里巴巴国际交易市场</a>
+                    <a href="#nowhere">阿里巴巴国际交易市场</a>
                     <span class="slash">|</span>
-                    <a href="#">1688</a>
+                    <a href="#nowhere">1688</a>
                     <span class="slash">|</span>
-                    <a href="#">阿里旅行·去啊</a>
+                    <a href="#nowhere">阿里旅行·去啊</a>
                     <span class="slash">|</span>
-                    <a href="#">阿里云计算</a>
+                    <a href="#nowhere">阿里云计算</a>
                     <span class="slash">|</span>
-                    <a href="#">阿里通信</a>
+                    <a href="#nowhere">阿里通信</a>
                     <span class="slash">|</span>
-                    <a href="#">阿里旅行·去啊</a>
+                    <a href="#nowhere">阿里旅行·去啊</a>
                     <span class="slash">|</span>
-                    <a href="#">万网</a>
+                    <a href="#nowhere">万网</a>
                     <span class="slash">|</span>
-                    <a href="#">高德</a>
+                    <a href="#nowhere">高德</a>
                     <span class="slash">|</span>
-                    <a href="#">友盟</a>
+                    <a href="#nowhere">友盟</a>
                     <span class="slash">|</span>
-                    <a href="#">虾米</a>
+                    <a href="#nowhere">虾米</a>
                     <span class="slash">|</span>
-                    <a href="#">天天动听</a>
+                    <a href="#nowhere">天天动听</a>
                     <span class="slash">|</span>
-                    <a href="#">来往</a>
+                    <a href="#nowhere">来往</a>
                     <span class="slash">|</span>
-                    <a href="#">钉钉</a>
+                    <a href="#nowhere">钉钉</a>
                     <span class="slash">|</span>
-                    <a href="#">支付宝</a>
+                    <a href="#nowhere">支付宝</a>
                 </div>
                 <div class="license">
                     <span>增值电信业务经营许可证： 浙B2-20110446</span>
