--- a/header_nav.html
+++ b/header_nav.html
@@ -33,16 +33,16 @@
 </head>
 <body>
     <nav class="top">
-        <a href="#">
+        <a href="#nowhere">
             <span class="glyphicon glyphicon glyphicon-home redColor"></span>
             天猫首页
         </a>
         <span>喵,欢迎来到天猫</span>
-        <a href="#">请登录</a>
-        <a href="#">请注册</a>
+        <a href="#nowhere">请登录</a>
+        <a href="#nowhere">请注册</a>
         <span class="pull-right">
-            <a href="#">我的订单</a>
-            <a href="#">
+            <a href="#nowhere">我的订单</a>
+            <a href="#nowhere">
                 <span class="glyphicon glyphicon-shopping-cart redColor"></span>
                 购物车<strong>0</strong>件
             </a>
