--- a/html_fundamental/1_HelloWorld.html
+++ b/html_fundamental/1_HelloWorld.html
@@ -254,6 +254,103 @@
         </tr>
     </table>
 
+    <h1 class="title">列表</h1>
+    无序列表<br />
+    <ul>
+        <li>Kobe</li>
+        <li>James</li>
+        <li>Davis</li>
+    </ul>
+    有序列表<br />
+    <ol>
+        <li>Kobe</li>
+        <li>James</li>
+        <li>Davis</li>
+    </ol>
+
+    <h1 class="title">div span</h1>
+    <img style="margin-left: 50px" src="demo.gif" />
+    <div style="margin-left: 100px">
+        <img src="demo.gif" />
+    </div>
+
+    <div>第一个div</div>
+    <div>第二个div</div>
+
+    <span>第一个span</span>
+    <span>第二个span</span>
+    <span>第三个span</span>
+    <p class="info">
+        div是块元素，即自动换行
+        常见的块元素还有h1,table,p <br />
+        span是内联元素，即不会换行
+        常见的内联元素还有img,a,b,strong
+    </pre>
+
+    <h1 class="title">字体颜色，大小</h1>
+    <font color="red" size="+2">红色+2</font> <br />
+    <font color="red" size="-2">红色-2</font>
+
+    <h1 class="title">内联框架</h1>
+    <iframe src="https://www.baidu.com" width="400px" height="300px"></iframe>
+
+    <h1 class="title">表格练习</h1>
+    <h1>英雄技能</h1>
+    <table border="1" width="80%">
+        <tr bgcolor="gray">
+            <td>技能名</td>
+            <td>触发</td>
+            <td width="20%">技能属性</td>
+            <td>技能效果</td>
+            <td>图标</td>
+        </tr>
+        <tr>
+            <td><strong>坚韧</strong></td>
+            <td><strong>被动</strong></td>
+            <td colspan="2" width="80%">如果盖伦在9/6/4秒内没有受到伤害或者被敌方技能命中，就会每5秒回复2%/8%最大生命值(于1/11级）。小兵的伤
+                害不会中断坚韧的效果。在11级时，来自非史诗野怪的伤害不再中断坚韧效果并目它的强度会显著提升。</td>
+            <td align="center"><img src="skill1.png" /></td>
+        </tr>
+        <tr>
+            <td><strong>致命打击</strong></td>
+            <td><strong>Q</strong></td>
+            <td>冷却时间：8</td>
+            <td>盖伦移除身上的所有减速效果，并获得30%移动速度加成，持续1.5/2/2.5/3/3.5秒。<br />
+                在接下来的4.5秒内，他的下次普通攻击会造成30/60/90/120/150(+1.4AD)物理伤害，并沉默目标1.5秒。</td>
+            <td align="center"><img src="skill2.png" /></td>
+        </tr>
+        <tr>
+            <td><strong>勇气</strong></td>
+            <td><strong>W</strong></td>
+            <td>冷却：23/21/19/17/15</td>
+            <td><strong>被动</strong>：击杀一个单位会永久提供0.33护甲和魔法抗性加成，最大值：40。<br />
+                <strong>主动</strong>：盖伦加固他的勇气2/2.75/3.5/4.25/5秒。在最初的0.75秒里，他少承受60%伤害并获得60%韧性。在剩余的持续时期里，他少承受30%伤害。</td>
+            <td align="center"><img src="skill3.png" /></td>
+        </tr>
+        <tr>
+            <td><strong>审判</strong></td>
+            <td><strong>E</strong></td>
+            <td>冷却：9<br />
+                距离:325</td>
+            <td>盖伦快速地旋舞大剑，持续3/3/3/3/3秒，在持续期间对周围敌人总共造成物理伤害14/18/22/26/30加上他总攻击力的36/37/38/39/40%，5次(英雄每升3级加1次）。
+                【审判】会在攻击单个敌人时造成33/33/33/33/33%额外伤害。取消【审判】会返还相当于剩余持续时长的冷却时间。
+                审判可以暴击，并造成额外伤害。
+                审判对小兵的伤害会减少25%.
+                能够在旋转时使用【提亚玛特】/【贪欲九头蛇】
+                现在，在旋转时右键到目标身上，会让你更靠近你的目标。</td>
+            <td align="center"><img src="skill4.png" /></td>
+        </tr>
+        <tr>
+            <td><strong>德玛西亚正义</strong></td>
+            <td><strong>R</strong></td>
+            <td>冷却：120/100/80</td>
+            <td>
+                    <strong>被动</strong>：最近获得最多击杀数的敌人会成为<strong>大反派</strong>。盖伦的E【审判】和普攻会对<strong>大反派</strong>造成额外真实伤害，伤害值为<strong>大反派</strong>1%的最大生命值。
+                    <br/><strong>主动</strong>：盖伦召唤德玛西亚之力，试图斩杀一名敌方英雄，目标损失的生命越多，则此技能造成的伤害越高。造成175/350/525魔法伤害加上目标已损失生命值的28/33/40%。对<strong>大反派</strong>造成真实伤害。</td>
+            <td align="center"><img src="skill5.png" /></td>
+        </tr>
+    </table>
+
 </body>
 
 </html>
