--- a/JavaScript/js_practise.html
+++ b/JavaScript/js_practise.html
@@ -188,9 +188,40 @@
             print("div style内容" + d1.getAttribute("style"));
         }
 
-        function changeBg(){
+        function changeBg() {
             var d1 = document.getElementById("d1");
             d1.setAttribute("style", "background-color: yellow");
+        }
+
+        function generateTable() {
+            var data = new Array(5);
+            data[0] = ['name', 'number', 'champion'];
+            data[1] = ['Jordan', '23', '6'];
+            data[2] = ['Kobe', '24', '5'];
+            data[3] = ['James', '24', '3'];
+            data[4] = ['Harden', '13', '0'];
+            document.write("<table width='900px' style='border-collapse: collapse'>");
+            for (let i = 0; i < 5; i++) {
+                for (d in data[i]) {
+                    if (i & 1 == 1) {
+                        document.write("<td width='20%' style='text-align:center; line-height: 30px; background-color: #f5f5f5;border-bottom:1px solid black'>");
+                    } else {
+                        document.write("<td width='20%' style='text-align:center; line-height: 30px; border-bottom:1px solid black'>");
+                    }
+                    document.write(data[i][d]);
+                    document.write("</td>");
+                }
+                document.write("<tr>");
+            }
+            document.write("</table>");
+        }
+
+        function focusInput(){
+            document.getElementById("div_input").innerHTML = "输入框调用了onFocus()";
+        }
+
+        function blurInput(){
+            document.getElementById("div_input").innerHTML = "输入框调用了onBlur()";
         }
 
     </script>
@@ -266,6 +297,13 @@
 
     <div id="d1" style="background-color: red" onclick="dom1()">div node</div>
     <button onclick="changeBg()">更改上面的背景色位黄色</button>
+    <br />
+    <button onclick="generateTable()">生成表格</button>
+
+    <form>
+        输入框 <input id = "input_text" onfocus="focusInput()" onblur="blurInput()" type = "text" value = "输入框"/>
+        <div id="div_input"></div>
+    </form>
 
 </body>
 
